overlays/production/traefik/traefik-dashboard-ingress-dns.yaml
---
# Dummy Ingress for DNS sync only (Dashboard routing handled by Helm IngressRoute)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-dns
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: internal-ca-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Traefik Dashboard"
    gethomepage.dev/description: "Reverse Proxy & Load Balancer"
    gethomepage.dev/group: "Applications - Intern"
    gethomepage.dev/icon: "traefik.png"
    gethomepage.dev/weight: "10"
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.elmstreet79.de
      http:
        paths:
          - path: /__dns_sync_only__
            pathType: Exact
            backend:
              service:
                name: traefik
                port:
                  number: 9000
